<resources>
    <string name="app_name">EasyTask</string>
    <string name="app_slogan">To do app based on location and time</string>
    <string name="under_construction">This page is under construction</string>

    <!-- google maps xml -->
    <string name="EnterAddress">Enter Address</string>

    <!-- login & register -->
    <string name="PromptEmail">Email</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="Register">Register</string>
    <string name="EmailRegistration">Email Registration</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Welcome">Welcome</string>
    <string name="SeeYou">See You</string>
    <string name="AuthenticationFailed">Authentication Failed</string>
    <string name="NotAllFilled">Some Fields Are Empty</string>
    <string name="ErrorSignIn">Incorrect email and/or password</string>
    <string name="PasswordsDoNotMatch">Passwords do not match</string>
    <string name="UserCreated">User Created</string>
    <string name="FirstAccount">First account? Sign up</string>
    <string name="AlreadyHaveAnAccount">Already have an account? Sign in</string>
    <string name="DisableBackButton">Action not allowed here</string>
    <string name="ExitBackButton">Click again to exit</string>

    <!-- menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Profile">Profile</string>
    <string name="Friends">Friends</string>
    <string name="Preferences">Preferences</string>
    <string name="ChooseLanguage">Choose Language</string>
    <string name="Settings">Settings</string>
    <string name="Language">Language</string>
    <string name="Other">Other</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="LogoutConfirm">Are you sure you want to log out?</string>

    <!-- task home xml -->
    <string name="Tasks">Tasks</string>
    <string name="OverDue">OverDue</string>
    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="UpcomingNext">Upcoming Next</string>

    <!-- add task activity -->
    <string name="Update">Update</string>
    <string name="ProvideATaskName">Provide a task name</string>
    <string name="ProvideASpecificDate">Provide a specific date</string>
    <string name="ProvideASpecificTime">Provide a specific time</string>
    <string name="DeleteTask">Delete task?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <!-- task list row xml -->
    <string name="TaskNameHere">Task Name Here</string>
    <string name="TaskDate">Task Date</string>
    <string name="TaskTime">Task Time</string>
    <string name="TaskPriority">Task Priority</string>
    <string name="TaskLocation">Task Location</string>

    <!-- task list row xml -->
    <string name="CreateNewTask">Create New Task</string>
    <string name="WhatIsToBeDone">What is to be done?</string>
    <string name="EnterYourTask">Enter Your Task</string>
    <string name="DueDate">Due Date</string>
    <string name="EnterDate">Enter Date</string>
    <string name="StartAt">Start At</string>
    <string name="EnterTime">Enter Time</string>
    <string name="Priority">Priority</string>
    <string name="Location">Location:</string>
    <string name="LocationIsNotSet">Location is not set</string>
    <string name="GetLocation">Get Location</string>
    <string name="ResetLocation">Reset Location</string>

    <!-- Toasts -->
    <string name="PermissionDenied">Permission Denied</string>
    <string name="LocationWasSaved">Location was saved</string>
    <string name="LocationNotFound">Location not found</string>
    <string name="PleaseWriteAnyLocationName">Please write any location name</string>

    <string name="AcceptThisToTrackYourLocation">Accept this to track your location</string>

    <string name="LocationWasReset">Location was reset</string>
    <string name="TaskUpdated">Task Updated</string>
    <string name="TaskAdded">Task Added</string>
    <string name="TryAgain">Try Again</string>
    <string name="TaskDeleted">Task Deleted</string>

    <!-- Settings -->
    <string name="GeneralTitle">GENERAL</string>

    <string name="SyncTitle">Synchronize Data</string>
    <string name="SyncSummary">Enable this to track device location</string>

    <string name="NotificationsTitle">NOTIFICATIONS</string>

    <string name="RingtoneTitle">Ringtone</string>
    <string name="RingtoneSummary">None</string>

    <string name="DistanceTitle">Distance</string>
    <string name="DistanceSummary">Range from task to be notified:</string>
    <string name="DistanceSummaryMeters">Meters</string>

    <!-- About -->
    <string name="Version">Version 1.0</string>
    <string name="Description">
        This application is based on location and time.
        Our goal is to help with busy schedule in order to maximize efficiency.
        Todo list using smart algorithm to task prioritization, helps you
        to be more productive.
        Note that this app is still under build, new versions will be released
        so we can make user experience to even better.
    </string>
    <string name="ContactUs">CONTACT US</string>

    <!-- spinner -->
    <string name="Low">Low</string>
    <string name="Moderate">Moderate</string>
    <string name="High">High</string>

    <string-array name="priorityValues">
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
    </string-array>
</resources>