<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/drawerPerson"
        android:icon="@drawable/ic_user"
        android:title="@string/Profile" />
    <item
        android:id="@+id/drawerFriends"
        android:icon="@drawable/ic_friends"
        android:title="@string/Friends" />

    <item android:title="@string/Preferences">
        <menu>
            <item
                android:id="@+id/drawerSetting"
                android:icon="@drawable/ic_settings"
                android:title="@string/Settings" />
            <item
                android:id="@+id/drawerLanguage"
                android:icon="@drawable/ic_language"
                android:title="@string/Language" />
        </menu>
    </item>

    <item android:title="@string/Other">
        <menu>
            <item
                android:id="@+id/drawerAbout"
                android:icon="@drawable/ic_info"
                android:title="@string/About" />
            <item
                android:id="@+id/drawerLogout"
                android:icon="@drawable/ic_logout"
                android:title="@string/Logout" />
        </menu>
    </item>

</menu>