<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_bg"
        android:scaleType="centerCrop"
        android:alpha="0.8888888" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/White"
                    android:hint="@string/PromptEmail" />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:hint="@string/Password"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/White"
                    android:layout_below="@+id/input_email"/>

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:hint="@string/ConfirmPassword"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/White"
                    android:layout_below="@+id/input_password"/>


                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_below="@+id/input_confirm_password"
                    android:text="@string/Register"
                    android:textColor="#ffffff"
                    android:background="@drawable/theme_button"/>

                <TextView
                    android:id="@+id/not_registered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AlreadyHaveAnAccount"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/btn_register"
                    android:textColor="#ffffff"
                    android:gravity="center" />

                <Button
                    android:id="@+id/link_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/not_registered"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/SignIn"
                    android:textColor="@color/linkBlue"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>