<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_bg"
        android:scaleType="centerCrop"
        android:alpha="0.8888888" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/PromptEmail"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:textColorHint="@color/White"
                android:autofillHints="@string/PromptEmail" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:textColorHint="@color/White"
                android:autofillHints="@string/Password" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/SignIn"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@drawable/theme_button"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1">

                <TextView
                    android:id="@+id/not_registered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/FirstAccount"
                    android:layout_marginTop="20dp"
                    android:gravity="center"/>

                <Button android:id="@+id/link_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Register"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/linkBlue"
                    android:layout_below="@+id/not_registered"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible"/>

</RelativeLayout>