<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D25">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_task"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0"
            android:gravity="center_vertical">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:paddingEnd="4dp"
                android:text="@string/Tasks"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- this was originally created
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_add"
                android:onClick="openAddTask"/>
                -->
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_below="@+id/toolbar_task"
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:clipToPadding="false"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/overDueText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="start"
                android:text="@string/OverDue"
                android:textSize="16sp"
                android:textColor="#CCCCCC"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp">

                <tomhirsh2.gmail.com.easytaskapp.NoScrollListView
                    android:id="@+id/taskListOverDue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary"
                    android:divider="#333232"
                    android:dividerHeight="1dp"
                    android:visibility="visible"
                    />
            </android.support.v7.widget.CardView>



            <TextView
                android:id="@+id/todayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="start"
                android:text="@string/Today"
                android:textSize="16sp"
                android:textColor="#CCCCCC"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp">

                <tomhirsh2.gmail.com.easytaskapp.NoScrollListView
                    android:id="@+id/taskListToday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary"
                    android:divider="#333232"
                    android:dividerHeight="1dp"
                    android:visibility="visible"
                    />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tomorrowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="start"
                android:text="@string/Tomorrow"
                android:textSize="16sp"
                android:textColor="#CCCCCC"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp">

                <tomhirsh2.gmail.com.easytaskapp.NoScrollListView
                    android:id="@+id/taskListTomorrow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary"
                    android:divider="#333232"
                    android:dividerHeight="1dp"
                    android:visibility="visible"
                    />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/upcomingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="start"
                android:text="@string/UpcomingNext"
                android:textSize="16sp"
                android:textColor="#CCCCCC"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:descendantFocusability="blocksDescendants"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp">

                <tomhirsh2.gmail.com.easytaskapp.NoScrollListView
                    android:id="@+id/taskListUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorPrimary"
                    android:divider="#333232"
                    android:dividerHeight="1dp"
                    android:visibility="visible"
                    />
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_action_add"
            app:backgroundTint="@color/colorPrimary"
            android:onClick="openAddTask"/>

    </android.support.design.widget.CoordinatorLayout>


</RelativeLayout>